--- a/index.html
+++ b/index.html
@@ -9,13 +9,27 @@
   </head>
   <body>
     <div class="container">
-      <button id="btn-db" class="btn" onclick="getData()">
-        Go to Database
-      </button>
+      <button id="show-tables" onclick="showTables()">Go to Database</button>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <script>
+      let i = 0;
+      let n = 0;
+      while (i < 5) {
+        i++;
+        if (i === 3) {
+          continue;
+        }
+        n += i;
+        console.log(n);
+      }
+      //1,3,7,12
+    </script>
   </body>
 </html>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/oracledb/4.2.0/oracledb.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/oracledb/4.2.0/oracledb.min.js"></script>
 <script src="./dbconnect.js"></script>
-<script src="./query.js"></script>
+<script src="data.java"></script> -->
