--- a/index.html
+++ b/index.html
@@ -15,17 +15,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <script>
-      let i = 0;
-      let n = 0;
-      while (i < 5) {
-        i++;
-        if (i === 3) {
-          continue;
-        }
-        n += i;
-        console.log(n);
-      }
-      //1,3,7,12
+      const carName = "Mazda";
+
+      // if (carName === "Audi") {
+      //   alert("You are correct");
+      // } else {
+      //   alert("You are wrong");
+      // }
+      const car = carName === "Audi" ? "You are correct" : "You are wrong";
+      console.log(car);
     </script>
   </body>
 </html>
